feat(processor): basic infrastructure